<resources>
    <string name="app_name">Abiodun</string>
    <string name="menu_help">Help</string>
    <string name="menu_pizza">Pizza</string>
    <string name="menu_abiodun">Abiodun</string>
    <string name="text_pizzahut">Pizza Hut</string>
    <string name="text_pizzanova">Pizza Nova</string>
    <string name="text_pizzapizza">Pizza Pizza</string>
    <string name="toast_permission_granted">Permission granted!</string>
    <string name="toast_permission_not_granted">Permission not granted!</string>
    <string name="toast_permission_needed">Permission is required!</string>
    <string name="but_next">Next</string>
    <string name="but_order">Order</string>
    <string name="desc_pizzahut">Image of Pizza Hut</string>
    <string name="desc_pizzanova">Image of Pizza Nova</string>
    <string name="desc_pizza_pizza">Image of Pizza Pizza</string>
    <string name="type_pizza">Choose Pizza type</string>
    <string name="toppings_pizza">Choose 5 Toppings</string>
    <string name="type_thin">Thin</string>
    <string name="type_regular">Regular</string>
    <string name="type_thick">Thick</string>
    <string name="topping_pepperoni">Pepperoni</string>
    <string name="topping_bacon">Bacon</string>
    <string name="topping_ham">Ham</string>
    <string name="topping_chicken">Chicken</string>
    <string name="topping_beef">Beef</string>
    <string name="topping_pineaple">Pineapple</string>
    <string name="topping_mushroom">Mushroom</string>
    <string name="topping_lettuce">Lettuce</string>
    <string name="size_large">Large</string>
    <string name="size_medium">Medium</string>
    <string name="size_small">Small</string>
    <string name="text_size">Size</string>
    <string name="text_type">Type</string>
    <string name="text_toppings">Toppings</string>
    <string name="error_select_store">Select a Pizza Store!</string>
    <string name="error_select_size">Select your Pizza size</string>
    <string name="error_select_type">Select the Pizza type</string>
    <string name="error_empty_edittext">This field is required</string>
    <string name="error_name_length">Name is too short</string>
    <string name="error_name_char">Name must be letters only</string>
    <string name="error_creditCard_length">Invalid credit card length</string>
    <string name="error_creditCard_expiry">Invalid expiry date</string>
    <string name="error_creditCard_expiry_month">Invalid expiry month</string>
    <string name="error_creditCard_expiry_year">Invalid expiry year</string>
    <string name="desc_pizza_shop">Image of Pizza Shop</string>
    <string name="select_toppings">Select at least 5 toppings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_credit_card_no">Credit Card Number</string>
    <string name="hint_credit_card_expiry">CC Expiry Date (MMYY)</string>
    <string name="hint_credit_card_ccv2">3 digit CCV2</string>
    <string name="text_order_details">Order details: </string>
    <string name="text_customer_details">Customer Details</string>
    <string name="but_checkout">Check Out</string>
    <string name="topping_details"> with the following toppings: </string>
    <string name="pizza"> Pizza </string>
    <string name="order_confirmation">Order Confirmed</string>
    <string name="text_confirmation">Checkout</string>
    <string name="but_dialog_ok">OK</string>
    <string name="but_dialog_cancel">Cancel</string>
    <string name="orderNo">Order Number:</string>
    <string name="orderReadyTime">Order will be ready for pickup at</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="github_url">http://github.com/biodunduke/</string>
    <string name="pizza_hut_url">https://www.pizzahut.ca/home</string>
    <string name="pizzanova_url">https://pizzanova.com/</string>
    <string name="pizzapizza_url">https://www.pizzapizza.ca/</string>
    <string name="access_granted">Access already granted</string>
    <string name="access_notGranted">Requesting Internet Access</string>
    <string name="request_granted">You granted Internet Access</string>
    <string name="request_declined">You declined Internet Access</string>
</resources>
