<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/biodun_constraint_layout"
    style="@style/PizzaHut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbiodunActivity1">

    <LinearLayout
        android:id="@+id/biodun_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/abiodun_pizzahut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_pizzahut"
            android:padding="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:srcCompat="@drawable/logo_pizzahut" />

        <TextView
            android:id="@+id/abiodun_text_pizzahut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_pizzahut" />

        <ImageButton
            android:id="@+id/abiodun_pizzanova"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_pizzanova"
            android:padding="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:srcCompat="@drawable/logo_pizzanova" />

        <TextView
            android:id="@+id/abiodun_text_pizzanova"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_pizzanova" />

        <ImageButton
            android:id="@+id/abiodun_pizzapizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_pizza_pizza"
            android:padding="5dp"
            android:paddingTop="5dp"
            app:srcCompat="@drawable/logo_pizzapizza" />

        <TextView
            android:id="@+id/abiodun_text_pizzapizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_pizzapizza" />

    </LinearLayout>

    <Button
        android:id="@+id/abiodun_but_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/but_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biodun_linearLayout" />

</android.support.constraint.ConstraintLayout>