<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/abiodun_edit_text_cred"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbiodunActivity3">

    <Button
        android:id="@+id/abiodun_but_order"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/but_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/abiodun_constraint_shop_image"
        android:layout_width="383dp"
        android:layout_height="179dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/abiodun_shop_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/desc_pizza_shop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/abiodun_order_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abiodun_constraint_shop_image" />

    <EditText
        android:id="@+id/abiodun_edit_text_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/abiodun_order_customer_details"
        app:layout_constraintTop_toBottomOf="@+id/abiodun_order_customer_details" />

    <EditText
        android:id="@+id/abiodun_edit_text_customer_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_address"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/abiodun_edit_text_customer_name"
        app:layout_constraintTop_toBottomOf="@+id/abiodun_edit_text_customer_name" />

    <EditText
        android:id="@+id/abiodun_edit_text_credit_card_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_credit_card_no"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/abiodun_edit_text_customer_name"
        app:layout_constraintTop_toBottomOf="@+id/abiodun_edit_text_customer_address" />

    <TextView
        android:id="@+id/abiodun_order_customer_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:capitalize="characters"
        android:text="@string/text_customer_details"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abiodun_order_detail" />

    <EditText
        android:id="@+id/abiodun_edit_text_credit_card_expiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_credit_card_expiry"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/abiodun_edit_text_customer_name"
        app:layout_constraintTop_toBottomOf="@+id/abiodun_edit_text_credit_card_no" />

</android.support.constraint.ConstraintLayout>