<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/abiodun_buttonOrder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbiodunActivity4">

    <android.support.constraint.Guideline
        android:id="@+id/abiodun_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <android.support.constraint.Guideline
        android:id="@+id/abiodun_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <android.support.constraint.Guideline
        android:id="@+id/abiodun_guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <TextView
        android:id="@+id/abiodun_order_orderdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_order_details"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/abiodun_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/abiodun_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/abiodun_order_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/abiodun_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/abiodun_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/abiodun_order_orderdetails" />

    <TextView
        android:id="@+id/abiodun_order_customer_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_customer_details"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/abiodun_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/abiodun_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/abiodun_order_details" />

    <TextView
        android:id="@+id/abiodun_order_customer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/abiodun_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/abiodun_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/abiodun_order_customer_details" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/abiodun_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/abiodun_guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline5">

        <TextClock
            android:id="@+id/abiodun_textClock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:format12Hour="hh:mm:ss a"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBlueBell"
            android:textSize="44sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/abiodun_orderReady"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/abiodun_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/abiodun_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/abiodun_order_customer" />

    <Button
        android:id="@+id/abiodun_button_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_checkout"
        app:layout_constraintBottom_toTopOf="@+id/abiodun_guideline_bottom"
        app:layout_constraintEnd_toStartOf="@+id/abiodun_guideline_right" />

</android.support.constraint.ConstraintLayout>